--- a/frontend/src/css/order.css
+++ b/frontend/src/css/order.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   /* border: 1px solid black; */
-  width: 51%;
+  width: 70%;
 }
 
 .olHeading {
@@ -83,7 +83,7 @@
 }
 
 .olContent .olContentH3 a{
-  color: red;
+  color: #FF5921;
   /* text-decoration: underline;
   text-underline-offset: 5px; */
   /* outline: 1px solid red; */
@@ -98,7 +98,7 @@
     position: absolute;
     width: 100%;
     height: 1px;
-    background-color: red;
+    background-color: #FF5921;
     bottom: -2px;
     left: 0;
     animation: underlined 0.2s ease-in-out ;
