--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -21,10 +21,10 @@
     /* border: 1px solid black; */
     /* width: 200px; */
     /* height: 50px; */
-    font-size: 2rem;
+    font-size: 3rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     line-height: normal;
     color: #FF5921;
 }
